debian/control: Build-Depends on python-pecan
This is needed for make check (so that restful mgr module can load).

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/debian/control
+++ b/debian/control
@@ -52,9 +52,11 @@ Build-Depends: bc,
                python-all-dev,
                python-cherrypy3,
                python-nose,
+	       python-pecan,
 	       python-prettytable,
 	       python-setuptools,
                python-sphinx,
+	       python-werkzeug,
                python3-all-dev,
                python3-setuptools,
                virtualenv | python-virtualenv,
