test/librados: extract functions using libcommon in test.cc into test_common.cc
Fixes: http://tracker.ceph.com/issues/20175
Signed-off-by: Kefu Chai <kchai@redhat.com>

(cherry picked from commit 82a848c2053ea69ebc6d3ec1003e18921e2d08d2)

Conflicts: since master has switched to cmake. the changes in this
  commit on .am files are ported from counterpart of CMakeLists.txt.

--- a/src/test/Makefile-client.am
+++ b/src/test/Makefile-client.am
@@ -40,6 +40,7 @@ if WITH_RADOS
 
 libradostest_la_SOURCES = \
 	test/librados/test.cc \
+	test/librados/test_common.cc \
 	test/librados/TestCase.cc
 noinst_LTLIBRARIES += libradostest.la
 libradostest_la_CXXFLAGS = $(UNITTEST_CXXFLAGS)
