--- a/src/test/Makefile-client.am
+++ b/src/test/Makefile-client.am
@@ -441,10 +441,11 @@ bin_DEBUGPROGRAMS += ceph_test_librbd
 ceph_test_librbd_api_SOURCES = \
 	test/librbd/test_support.cc \
 	test/librbd/test_librbd.cc \
-	test/librbd/test_main.cc
+	test/librbd/test_main.cc \
+	test/librados/test.cc
 ceph_test_librbd_api_CXXFLAGS = $(UNITTEST_CXXFLAGS)
 ceph_test_librbd_api_LDADD = \
-	$(LIBRBD) $(LIBRADOS) $(LIBCOMMON) $(UNITTEST_LDADD) $(RADOS_TEST_LDADD)
+	$(LIBRBD) $(LIBRADOS) $(UNITTEST_LDADD)
 bin_DEBUGPROGRAMS += ceph_test_librbd_api
 
 noinst_HEADERS += \
