EC: Add AVX512 support for ISA-L-based codes
ISA-L v2.16 brings in support for AVX512-based erasure
coding, which has potential for 200% performance gain
over AVX2.  We already have v2.16 in the tree, but are
not using/building the AVX512 EC bits.  This patch adds
the missing files to the EC builds.

Signed-off-by: Tushar Gohad <tushar.gohad@intel.com>
Signed-off-by: Ganesh Mahalingam <ganesh.mahalingam@intel.com>

--- a/src/erasure-code/isa/CMakeLists.txt
+++ b/src/erasure-code/isa/CMakeLists.txt
@@ -44,6 +44,14 @@ set(isa_srcs
   ${isal_src_dir}/erasure_code/gf_6vect_dot_prod_avx.asm
   ${isal_src_dir}/erasure_code/gf_vect_dot_prod_avx.asm
   ${isal_src_dir}/erasure_code/gf_vect_mul_sse.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_dot_prod_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_mad_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_dot_prod_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_mad_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_dot_prod_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_mad_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_vect_dot_prod_avx512.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mad_avx512.asm
   ErasureCodeIsa.cc
   ErasureCodeIsaTableCache.cc
   ErasureCodePluginIsa.cc
