--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ mysql-python==1.2.3
 ndg-httpsclient==0.4.2
 netaddr==0.7.19           # via oslo.config, oslo.utils, python-neutronclient
 netifaces==0.10.5         # via oslo.utils
+nose==1.3.7
 openstacksdk==0.9.15      # via python-openstackclient
 os-client-config==1.26.0  # via openstacksdk, osc-lib, python-neutronclient
 osc-lib==1.3.0            # via python-neutronclient, python-openstackclient
