qa: always sleep forever with deepsea-test.yaml
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/qa/suites/deepsea-test.yaml
+++ b/qa/suites/deepsea-test.yaml
@@ -11,6 +11,6 @@ tasks:
 - deepsea:
     repo: https://github.com/smithfarm/DeepSea.git
     branch: wip-qa-suite
-#- exec:
-#    master.a:
-#      - sleep 1000000000 # forever
+- exec:
+    master.a:
+      - sleep 1000000000 # forever
