--- a/qa/objectstore/bluestore-comp.yaml
+++ b/qa/objectstore/bluestore-comp.yaml
@@ -8,6 +8,7 @@ overrides:
       osd:
         osd objectstore: bluestore
         bluestore block size: 96636764160
+        bluestore fsck on mount: true
         debug bluestore: 30
         debug bdev: 20
         debug bluefs: 20
