qa/suites/rados/singleton-nomsgr/full-tiering: unset quota at end
If we leave the quota set, the proxied ops will block
indefinitely, which will block scrubbing on the cache tier pgs
indefinitely.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
@@ -24,3 +24,5 @@ tasks:
       - ceph osd pool set-quota ec max_bytes 20480000
       - ceph osd pool set ec-ca target_max_bytes 20480000
       - timeout 30 rados -p ec-ca bench 30 write || true
+      - ceph osd pool set-quota ec-ca max_bytes 0
+      - ceph osd pool set-quota ec max_bytes 0
