qa/suites/rados/singleton-nomsgr/multi-backfill-reject: clean up
Set pool size back to 2 so we don't have to have backfill
complete (despite rejection probability) in order to get back to
healthy.  This way we scrub on cleanup.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/singleton-nomsgr/all/multi-backfill-reject.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/multi-backfill-reject.yaml
@@ -31,3 +31,6 @@ tasks:
       - sudo ceph osd in 0 1
 - sleep:
     duration: 60
+- exec:
+    client.0:
+      - sudo ceph osd pool set foo size 2
