restful: Introduce create-self-signed-cert command
This implements a create-self-signed-cert command for the ceph-mgr
restful interface.

It is designed so that it will try to restart the module once the cert
is created.

Signed-off-by: Boris Ranto <branto@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -325,10 +325,12 @@ Requires:       ceph-base = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?fedora} || 0%{?rhel}
 Requires:       python-cherrypy
 Requires:       python-werkzeug
+Requires:       pyOpenSSL
 %endif
 %if 0%{?suse_version}
 Requires: 	python-CherryPy
 Requires:       python-Werkzeug
+Requires:       python-pyOpenSSL
 %endif
 Requires:       python-pecan
 %description mgr
