--- a/debian/control
+++ b/debian/control
@@ -161,6 +161,7 @@ Description: debugging symbols for ceph-mds
 Package: ceph-mgr
 Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
+         python-openssl,
          python-pecan,
          python-werkzeug,
          ${misc:Depends},
