--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -556,7 +556,16 @@ if(NOT FREEBSD)
   add_dependencies(tests ceph-detect-init)
 endif(NOT FREEBSD)
 
-add_ceph_test(test-ceph-helpers.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers.sh)
+add_ceph_test(test-ceph-helpers-background.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-background.sh)
+add_ceph_test(test-ceph-helpers-config.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-config.sh)
+add_ceph_test(test-ceph-helpers-kill-daemons.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-kill-daemons.sh)
+add_ceph_test(test-ceph-helpers-mon.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-mon.sh)
+add_ceph_test(test-ceph-helpers-num-pgs.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-num-pgs.sh)
+add_ceph_test(test-ceph-helpers-osds.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-osds.sh)
+add_ceph_test(test-ceph-helpers-pgs.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-pgs.sh)
+add_ceph_test(test-ceph-helpers-setup.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-setup.sh)
+add_ceph_test(test-ceph-helpers-the-rest.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-the-rest.sh)
+add_ceph_test(test-ceph-helpers-wait-for-status.sh ${CMAKE_CURRENT_SOURCE_DIR}/test-ceph-helpers-wait-for-status.sh)
 add_ceph_test(erasure-decode-non-regression.sh ${CMAKE_SOURCE_DIR}/qa/workunits/erasure-code/encode-decode-non-regression.sh)
 
 add_ceph_test(ceph_objectstore_tool.py ${CMAKE_CURRENT_SOURCE_DIR}/ceph_objectstore_tool.py)
