--- a/qa/objectstore/bluestore-comp.yaml
+++ b/qa/objectstore/bluestore-comp.yaml
@@ -14,6 +14,19 @@ overrides:
         debug rocksdb: 10
         bluestore compression mode: aggressive
         bluestore fsck on mount: true
+  ceph-deploy:
+    fs: xfs
+    bluestore: yes
+    conf:
+      osd:
+        osd objectstore: bluestore
+        bluestore block size: 96636764160
+        debug bluestore: 30
+        debug bdev: 20
+        debug bluefs: 20
+        debug rocksdb: 10
+        bluestore compression mode: aggressive
+        bluestore fsck on mount: true
 
 # this doesn't work with failures bc the log writes are not atomic across the two backends
 #        bluestore bluefs env mirror: true
