FreeBSD: Example script of building a multijail cluster on ONE host.
 - example variation for vstart.sh to easily setup a FreeBSD cluster.

Signed-off-by: Willem Jan Withagen <wjw@digiware.nl>

--- a/src/script/CMakeLists.txt
+++ b/src/script/CMakeLists.txt
@@ -13,3 +13,9 @@ configure_file(
 
 add_custom_target(uninstall
     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
+
+if(FREEBSD)
+  install(PROGRAMS
+    ${CMAKE_CURRENT_SOURCE_DIR}/build-cluster.FreeBSD.sh
+    DESTINATION sbin)
+endif()
