--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -1,9 +1,3 @@
-if(HAVE_LIBXFS)
-  set(libos_xfs_srcs
-    filestore/XfsFileStoreBackend.cc
-    fs/XFS.cc)
-endif(HAVE_LIBXFS)
-
 set(libos_srcs
   ObjectStore.cc
   Transaction.cc
@@ -19,13 +13,11 @@ set(libos_srcs
   filestore/IndexManager.cc
   filestore/LFNIndex.cc
   filestore/WBThrottle.cc
-  filestore/ZFSFileStoreBackend.cc
   memstore/MemStore.cc
   kstore/KStore.cc
   kstore/kstore_types.cc
   fs/FS.cc
-  fs/aio.cc
-  ${libos_xfs_srcs})
+  fs/aio.cc)
 
 if(HAVE_LIBAIO)
   list(APPEND libos_srcs
@@ -55,6 +47,21 @@ if(WITH_PMEM)
     bluestore/PMEMDevice.cc)
 endif(WITH_PMEM)
 
+if(HAVE_LIBXFS)
+  list(APPEND libos_srcs
+    filestore/XfsFileStoreBackend.cc
+    fs/XFS.cc)
+endif()
+
+if(HAVE_LIBZFS)
+  add_library(os_zfs_objs OBJECT
+    filestore/ZFSFileStoreBackend.cc
+    fs/ZFS.cc)
+  target_include_directories(os_zfs_objs PRIVATE
+    ${ZFS_INCLUDE_DIRS})
+  list(APPEND libos_srcs $<TARGET_OBJECTS:os_zfs_objs>)
+endif()
+
 if(WITH_SPDK)
   list(APPEND libos_srcs
     bluestore/NVMEDevice.cc)
@@ -74,6 +81,10 @@ endif()
 
 if(WITH_PMEM)
   target_link_libraries(os ${PMEM_LIBRARY})
+endif()
+
+if(HAVE_LIBZFS)
+  target_link_libraries(os ${ZFS_LIBRARIES})
 endif()
 
 if(WITH_SPDK)
