librados: allow service registrations
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/src/test/librados/CMakeLists.txt
+++ b/src/test/librados/CMakeLists.txt
@@ -120,6 +120,15 @@ set_target_properties(ceph_test_rados_api_lock PROPERTIES COMPILE_FLAGS
 target_link_libraries(ceph_test_rados_api_lock
   rados_a ${UNITTEST_LIBS} radostest)
 
+# ceph_test_rados_api_service
+add_executable(ceph_test_rados_api_service
+  service.cc
+  )
+set_target_properties(ceph_test_rados_api_service PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(ceph_test_rados_api_service
+  rados_a global ${UNITTEST_LIBS} radostest)
+
 # ceph_test_rados_api_tier
 add_executable(ceph_test_rados_api_tier
   tier.cc
