--- a/qa/suites/upgrade/hammer-jewel-x/stress-split/1-hammer-install-and-upgrade-to-jewel/hammer-to-jewel.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/stress-split/1-hammer-install-and-upgrade-to-jewel/hammer-to-jewel.yaml
@@ -20,7 +20,7 @@ tasks:
       branch: jewel
     osd.3:
       branch: jewel
-- print: '*** client.0 upgraded packages to jewel'
+- print: '*** upgraded packages to jewel on server nodes; client node stays on hammer'
 - parallel:
   - workload-h-j
   - upgrade-sequence-h-j
@@ -33,13 +33,11 @@ tasks:
     - libcephfs2
     - libcephfs-devel
     - libcephfs-dev
+- print: '*** upgraded packages to jewel on client node'
 - exec:
     osd.0:
-    - ceph osd set sortbitwise
-    - ceph osd set require_jewel_osds
     - for p in `ceph osd pool ls` ; do ceph osd pool set $p use_gmt_hitset true ;
       done
-- print: '**** done install.upgrade client.0 to jewel'
 upgrade-sequence-h-j:
   sequential:
   - ceph.restart:
@@ -63,6 +61,7 @@ upgrade-sequence-h-j:
   - exec:
       mon.a:
       - sleep 300
+      - ceph osd set sortbitwise
       - ceph osd set require_jewel_osds
   - ceph.healthy: null
   - print: '**** done ceph.healthy'
