tests: deepsea: change default to SUSE/DeepSea.git
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/qa/suites/deepsea-test.yaml
+++ b/qa/suites/deepsea-test.yaml
@@ -9,8 +9,8 @@ openstack:
 tasks:
 - install:
 - deepsea:
-    repo: https://github.com/smithfarm/DeepSea.git
-    branch: wip-qa-suite
+    repo: https://github.com/SUSE/DeepSea.git
+    branch: master
 - exec:
     master.a:
       - sleep 1000000000 # forever
