qa/tasks/ceph: explicitly add osds to crush map for upgrades
Before kraken, ceph-osd didn't add itself to crush... ceph-osd-prestart.sh
did it.  And ceph.py doesn't use that.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
+++ b/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
@@ -49,6 +49,7 @@ tasks:
 - ceph:
    fs: xfs
    skip_mgr_daemons: true
+   add_osds_to_crush: true
 - print: "**** done ceph xfs"
 - sequential:
    - workload
