--- a/qa/suites/upgrade/hammer-jewel-x/parallel/1-hammer-jewel-install/hammer-jewel.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/parallel/1-hammer-jewel-install/hammer-jewel.yaml
@@ -6,6 +6,7 @@ tasks:
 - ceph:
    fs: xfs
    skip_mgr_daemons: true
+   add_osds_to_crush: true
 - install.upgrade:
     exclude_packages: ['ceph-mgr','libcephfs2','libcephfs-devel','libcephfs-dev']
     osd.0:
