--- a/qa/suites/upgrade/hammer-jewel-x/stress-split/1-hammer-install-and-upgrade-to-jewel/hammer-to-jewel.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/stress-split/1-hammer-install-and-upgrade-to-jewel/hammer-to-jewel.yaml
@@ -10,6 +10,7 @@ tasks:
 - ceph:
     fs: xfs
     skip_mgr_daemons: true
+    add_osds_to_crush: true
 - install.upgrade:
     exclude_packages:
     - ceph-mgr
