ceph.spec.in: fix typo (upper-case W in python-Werkzeug)
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -117,7 +117,7 @@ BuildRequires:	python-werkzeug
 %endif
 %if 0%{?suse_version}
 BuildRequires:	python-CherryPy
-BuildRequires:	python-werkzeug
+BuildRequires:	python-Werkzeug
 %endif
 BuildRequires:	python-pecan
 %endif
