--- a/qa/suites/upgrade/kraken-x/stress-split-erasure-code/3-thrash/default.yaml
+++ b/qa/suites/upgrade/kraken-x/stress-split-erasure-code/3-thrash/default.yaml
@@ -20,4 +20,5 @@ stress-tasks:
     chance_thrash_cluster_full: 0
     chance_thrash_pg_upmap: 0
     chance_thrash_pg_upmap_items: 0
+    chance_force_recovery: 0
 - print: "**** done thrashosds 3-thrash"
