--- a/qa/deepsea/2nodes3disks.yaml
+++ b/qa/deepsea/2nodes3disks.yaml
@@ -1,7 +1,7 @@
 ceph_cm: salt
 roles:
 - [master.a]
-- [node.1]
+- [node.1, client.0]
 openstack:
 - volumes: # attached to each instance
     count: 3
