qa: deepsea: tweak generic tasks.yaml
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/qa/deepsea/tasks.yaml
+++ b/qa/deepsea/tasks.yaml
@@ -1,6 +1,6 @@
 tasks:
 - install:
 - deepsea:
-    repo: null
-    branch: null
-    exec: null
+    repo: https://github.com/SUSE/DeepSea.git
+    branch: master
+    exec: []
