--- a/qa/suites/rados/basic/tasks/rados_python.yaml
+++ b/qa/suites/rados/basic/tasks/rados_python.yaml
@@ -2,6 +2,7 @@ overrides:
   ceph:
     log-whitelist:
     - wrongly marked me down
+    - HEALTH_WARN OSDMAP_FLAGS
 tasks:
 - workunit:
     clients:
