--- a/qa/suites/rados/basic/tasks/rados_python.yaml
+++ b/qa/suites/rados/basic/tasks/rados_python.yaml
@@ -3,6 +3,9 @@ overrides:
     log-whitelist:
     - wrongly marked me down
     - HEALTH_WARN OSDMAP_FLAGS
+    - HEALTH_WARN PG_
+    - HEALTH_ERR PG_
+    - HEALTH_WARN OSD_
 tasks:
 - workunit:
     clients:
