--- a/qa/suites/rados/basic/tasks/repair_test.yaml
+++ b/qa/suites/rados/basic/tasks/repair_test.yaml
@@ -20,6 +20,8 @@ overrides:
       - HEALTH_WARN OSDMAP_FLAGS
       - HEALTH_WARN OSD_
       - HEALTH_WARN PG_
+      - HEALTH_ERR PG_
+      - HEALTH_ERR OSD_
     conf:
       osd:
         filestore debug inject read err: true
