--- a/qa/suites/rados/basic/tasks/rados_stress_watch.yaml
+++ b/qa/suites/rados/basic/tasks/rados_stress_watch.yaml
@@ -1,7 +1,7 @@
 overrides:
   ceph:
     log-whitelist:
-      - HEALTH_WARN OSD_CACHE_NO_HIT_SET
+      - HEALTH_WARN CACHE_POOL_NO_HIT_SET
       - HEALTH_WARN TOO_FEW_PGS
 tasks:
 - workunit:
