--- a/qa/suites/rados/singleton-nomsgr/all/cache-fs-trunc.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/cache-fs-trunc.yaml
@@ -4,7 +4,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-      - HEALTH_WARN OSD_CACHE_NO_HIT_SET
+      - HEALTH_WARN CACHE_POOL_NO_HIT_SET
     conf:
       global:
         osd max object name len: 460
