--- a/qa/tasks/thrashosds-health.yaml
+++ b/qa/tasks/thrashosds-health.yaml
@@ -3,10 +3,10 @@ override:
     log-whitelist:
       - HEALTH_WARN OSDMAP_FLAGS
       - HEALTH_WARN OSD_
-      - HEALTH_WARN OSDMAP_FLAGS
       - HEALTH_WARN PG_
       - HEALTH_ERR OSD_
       - HEALTH_ERR PG_
+      - HEALTH_WARN CACHE_POOL_
       - HEALTH_WARN SMALLER_PGP_NUM
       - HEALTH_WARN DEGRADED_OBJECTS
       - HEALTH_WARN MISPLACED_OBJECTS
