--- a/qa/suites/rados/singleton/all/lost-unfound.yaml
+++ b/qa/suites/rados/singleton/all/lost-unfound.yaml
@@ -19,7 +19,5 @@ tasks:
       - HEALTH_WARN OSD_
       - HEALTH_WARN PG_
       - HEALTH_ERR PG_
-      - HEALTH_WARN UNFOUND_OBJECTS
-      - HEALTH_WARN MISPLACED_OBJECTS
-      - HEALTH_WARN DEGRADED_OBJECTS
+      - HEALTH_WARN OBJECT_
 - lost_unfound:
