--- a/qa/tasks/thrashosds-health.yaml
+++ b/qa/tasks/thrashosds-health.yaml
@@ -8,7 +8,7 @@ override:
       - HEALTH_ERR PG_
       - HEALTH_WARN CACHE_POOL_
       - HEALTH_WARN SMALLER_PGP_NUM
-      - HEALTH_WARN DEGRADED_OBJECTS
-      - HEALTH_WARN MISPLACED_OBJECTS
+      - HEALTH_WARN OBJECT_DEGRADED
+      - HEALTH_WARN OBJECT_MISPLACED
       - HEALTH_WARN SLOW_REQUESTS
       - HEALTH_WARN TOO_FEW_PGS
