--- a/qa/suites/rados/singleton/all/ec-lost-unfound.yaml
+++ b/qa/suites/rados/singleton/all/ec-lost-unfound.yaml
@@ -19,6 +19,6 @@ tasks:
       - HEALTH_WARN OSDMAP_FLAGS
       - HEALTH_WARN OSD_
       - HEALTH_WARN PG_
-      - HEALTH_WARN UNFOUND_OBJECTS
-      - HEALTH_WARN DEGRADED_OBJECTS
+      - HEALTH_WARN OBJECT_UNFOUND
+      - HEALTH_WARN OBJECT_DEGRADED
 - ec_lost_unfound:
