--- a/qa/tasks/thrashosds-health.yaml
+++ b/qa/tasks/thrashosds-health.yaml
@@ -10,5 +10,5 @@ override:
       - HEALTH_WARN SMALLER_PGP_NUM
       - HEALTH_WARN OBJECT_DEGRADED
       - HEALTH_WARN OBJECT_MISPLACED
-      - HEALTH_WARN SLOW_REQUESTS
+      - HEALTH_WARN REQUEST_SLOW
       - HEALTH_WARN TOO_FEW_PGS
