tests: deepsea: make admin keyring world-readable
The workunit task (used in deepsea/ceph-test/rbd-cli-generic)
runs the workunit script as a non-root user.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/qa/suites/deepsea/ceph-test/librbd/tasks/1-librbd.yaml
+++ b/qa/suites/deepsea/ceph-test/librbd/tasks/1-librbd.yaml
@@ -3,6 +3,7 @@ overrides:
     exec:
     - suites/ceph-test/librbd.sh
 tasks:
+# the "exec" task runs commands as root
 - exec:
     client.0:
       - "ceph_test_librbd"
