common: allow long paths for socket bind
This allows arbitrarily long socket paths independent of the UNIX socket path
limit which is comically small at ~100 characters. (However, this doesn't
permit file names larger than the UNIX socket path limit and there is no way to
fix that nor is it really desired.)

Addresses: http://tracker.ceph.com/issues/15249
Addresses: http://tracker.ceph.com/issues/16014
Partially addresses: http://tracker.ceph.com/issues/16895

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -614,6 +614,7 @@ set(ceph_common_objs
   $<TARGET_OBJECTS:crush_objs>)
 set(ceph_common_deps
   json_spirit erasure_code rt ${LIB_RESOLV}
+  Boost::filesystem
   Boost::thread
   Boost::system
   Boost::regex
