--- a/teuthology/ceph.conf.template
+++ b/teuthology/ceph.conf.template
@@ -24,7 +24,7 @@
 	mon warn on crush straw calc version zero = false
 	mon warn on no sortbitwise = false
 
-        osd pool default erasure code profile = "plugin=jerasure technique=reed_sol_van k=2 m=1 ruleset-failure-domain=osd"
+        osd pool default erasure code profile = "plugin=jerasure technique=reed_sol_van k=2 m=1 ruleset-failure-domain=osd crush-failure-domain=osd"
 
 	osd default data pool replay window = 5
 
