--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Build-Depends: bc,
                python-werkzeug,
                python3-all-dev,
                python3-setuptools,
+               socat,
                uuid-runtime,
                valgrind,
                virtualenv | python-virtualenv,
