--- a/src/rgw/CMakeLists.txt
+++ b/src/rgw/CMakeLists.txt
@@ -76,6 +76,8 @@ set(rgw_a_srcs
   rgw_sync_module_es.cc
   rgw_sync_module_es_rest.cc
   rgw_sync_module_log.cc
+  rgw_custom_access.cc
+  rgw_sync_module_custom.cc
   rgw_period_history.cc
   rgw_period_puller.cc
   rgw_period_pusher.cc
