qa/suites/rbd: mirroring tests should use rbd cap profiles
Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/qa/suites/rbd/mirror-ha/workloads/rbd-mirror-ha-workunit.yaml
+++ b/qa/suites/rbd/mirror-ha/workloads/rbd-mirror-ha-workunit.yaml
@@ -1,6 +1,11 @@
 meta:
 - desc: run the rbd_mirror_ha.sh workunit to test the rbd-mirror daemon
 tasks:
+- exec:
+    cluster1.client.mirror:
+    - ceph --cluster cluster1 auth caps client.mirror mon 'profile rbd' osd 'profile rbd'
+    cluster2.client.mirror:
+    - ceph --cluster cluster2 auth caps client.mirror mon 'profile rbd' osd 'profile rbd'
 - workunit:
     clients:
       cluster1.client.mirror: [rbd/rbd_mirror_ha.sh]
