--- a/qa/suites/rbd/mirror/rbd-mirror/one-per-cluster.yaml
+++ b/qa/suites/rbd/mirror/rbd-mirror/one-per-cluster.yaml
@@ -8,6 +8,11 @@ overrides:
         admin socket: /var/run/ceph/$cluster-$name.asok
         pid file: /var/run/ceph/$cluster-$name.pid
 tasks:
+- exec:
+    cluster1.client.mirror:
+    - ceph --cluster cluster1 auth caps client.mirror mon 'profile rbd' osd 'profile rbd'
+    cluster2.client.mirror:
+    - ceph --cluster cluster2 auth caps client.mirror mon 'profile rbd' osd 'profile rbd'
 - rbd-mirror:
     client: cluster1.client.mirror
 - rbd-mirror:
