--- a/qa/suites/deepsea/ceph-test/rbd-cli-generic/tasks/1-rbd-cli-generic.yaml
+++ b/qa/suites/deepsea/ceph-test/rbd-cli-generic/tasks/1-rbd-cli-generic.yaml
@@ -7,6 +7,7 @@ tasks:
 - exec:
     client.0:
       - "chmod a+r /etc/ceph/ceph.client.admin.keyring"
+      - "ceph osd pool create rbd 8"
 # the "workunit" task runs commands as the user "ubuntu"
 - workunit:
     clients:
