rbd-mirror: skeleton integration with service daemon API
Signed-off-by: Jason Dillaman <dillaman@redhat.com>

--- a/src/tools/rbd_mirror/CMakeLists.txt
+++ b/src/tools/rbd_mirror/CMakeLists.txt
@@ -16,6 +16,7 @@ set(rbd_mirror_internal
   MirrorStatusWatcher.cc
   PoolReplayer.cc
   PoolWatcher.cc
+  ServiceDaemon.cc
   Threads.cc
   types.cc
   image_replayer/BootstrapRequest.cc
