--- a/qa/suites/smoke/basic/tasks/rados_cache_snaps.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_cache_snaps.yaml
@@ -26,13 +26,13 @@ tasks:
     op_weights:
       copy_from: 50
       delete: 50
-      evict: 50
-      flush: 50
+      cache_evict: 50
+      cache_flush: 50
       read: 100
       rollback: 50
       snap_create: 50
       snap_remove: 50
-      try_flush: 50
+      cache_try_flush: 50
       write: 100
     ops: 4000
     pool_snaps: true
