--- a/qa/suites/upgrade/hammer-jewel-x/tiering/3-upgrade.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/tiering/3-upgrade.yaml
@@ -16,9 +16,9 @@ workload:
         write: 100
         delete: 50
         copy_from: 50
-        flush: 50
-        try_flush: 50
-        evict: 50
+        cache_flush: 50
+        cache_try_flush: 50
+        cache_evict: 50
   - print: "**** done rados"
 
 upgrade-sequence:
