qa: update whitelist for "wrongly marked me down"
Signed-off-by: John Spray <john.spray@redhat.com>

--- a/qa/suites/fs/basic_functional/tasks/client-recovery.yaml
+++ b/qa/suites/fs/basic_functional/tasks/client-recovery.yaml
@@ -5,7 +5,7 @@ overrides:
   ceph:
     log-whitelist:
       - evicting unresponsive client
-      - wrongly marked me down
+      - but it is still running
       - slow request
 
 tasks:
