--- a/qa/suites/rados/basic/tasks/rados_api_tests.yaml
+++ b/qa/suites/rados/basic/tasks/rados_api_tests.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
     - reached quota
-    - wrongly marked me down
+    - but it is still running
     - overall HEALTH_
     - (POOL_FULL)
     - (SMALLER_PGP_NUM)
