--- a/qa/suites/rados/upgrade/jewel-x-singleton/3-thrash/default.yaml
+++ b/qa/suites/rados/upgrade/jewel-x-singleton/3-thrash/default.yaml
@@ -5,7 +5,7 @@ meta:
 overrides:
   ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - objects unfound and apparently lost
     - log bound mismatch
 tasks:
