--- a/qa/cephfs/overrides/whitelist_wrongly_marked_down.yaml
+++ b/qa/cephfs/overrides/whitelist_wrongly_marked_down.yaml
@@ -4,7 +4,7 @@ overrides:
       - overall HEALTH_
       - (OSD_DOWN)
       - (OSD_
-      - wrongly marked me down
+      - but it is still running
 # MDS daemon 'b' is not responding, replacing it as rank 0 with standby 'a'
       - is not responding
     conf:
