--- a/qa/suites/kcephfs/recovery/tasks/client-recovery.yaml
+++ b/qa/suites/kcephfs/recovery/tasks/client-recovery.yaml
@@ -4,7 +4,7 @@
 overrides:
   ceph:
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
       - slow request
 
 tasks:
