--- a/qa/suites/rados/singleton-bluestore/all/cephtool.yaml
+++ b/qa/suites/rados/singleton-bluestore/all/cephtool.yaml
@@ -15,7 +15,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - had wrong client addr
     - had wrong cluster addr
     - must scrub before tier agent can activate
