--- a/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
@@ -9,7 +9,7 @@ tasks:
         osd max object name len: 400
         osd max object namespace len: 64
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
       - overall HEALTH_
       - (OSDMAP_FLAGS)
       - (OSD_
