--- a/qa/suites/rados/singleton/all/osd-recovery-incomplete.yaml
+++ b/qa/suites/rados/singleton/all/osd-recovery-incomplete.yaml
@@ -15,7 +15,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
       - overall HEALTH_
       - (OSDMAP_FLAGS)
       - (OSD_
