--- a/qa/suites/rados/singleton/all/radostool.yaml
+++ b/qa/suites/rados/singleton/all/radostool.yaml
@@ -13,7 +13,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - had wrong client addr
     - had wrong cluster addr
     - reached quota
