--- a/qa/suites/rados/singleton/all/rest-api.yaml
+++ b/qa/suites/rados/singleton/all/rest-api.yaml
@@ -16,7 +16,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
       - had wrong client addr
       - overall HEALTH_
       - (OSDMAP_FLAGS)
