--- a/qa/suites/rados/singleton/all/thrash-eio.yaml
+++ b/qa/suites/rados/singleton/all/thrash-eio.yaml
@@ -21,7 +21,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - missing primary copy of
     - objects unfound and apparently lost
     - overall HEALTH_
