--- a/qa/suites/rados/singleton/all/thrash-rados/thrash-rados.yaml
+++ b/qa/suites/rados/singleton/all/thrash-rados/thrash-rados.yaml
@@ -16,7 +16,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
 - thrashosds:
     op_delay: 30
     clean_interval: 120
