--- a/qa/suites/rados/thrash-erasure-code-big/thrashers/mapgap.yaml
+++ b/qa/suites/rados/thrash-erasure-code-big/thrashers/mapgap.yaml
@@ -1,7 +1,7 @@
 overrides:
   ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - objects unfound and apparently lost
     - osd_map_cache_size
     conf:
