--- a/qa/suites/rados/thrash-erasure-code/thrashers/mapgap.yaml
+++ b/qa/suites/rados/thrash-erasure-code/thrashers/mapgap.yaml
@@ -9,7 +9,7 @@ overrides:
         osd scrub max interval: 120
         osd max backfills: 5
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - objects unfound and apparently lost
     - osd_map_cache_size
 tasks:
