--- a/qa/suites/rados/thrash/thrashers/morepggrow.yaml
+++ b/qa/suites/rados/thrash/thrashers/morepggrow.yaml
@@ -10,7 +10,7 @@ overrides:
         filestore queue throttle max multiple: 10
         osd max backfills: 9
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - objects unfound and apparently lost
 tasks:
 - thrashosds:
