--- a/qa/suites/rest/basic/tasks/rest_test.yaml
+++ b/qa/suites/rest/basic/tasks/rest_test.yaml
@@ -20,7 +20,7 @@ tasks:
 - ceph:
     fs: xfs
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     conf:
       client.rest0:
         debug ms: 1
