--- a/qa/suites/smoke/basic/tasks/rados_cache_snaps.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_cache_snaps.yaml
@@ -2,7 +2,7 @@ tasks:
 - install: null
 - ceph:
     log-whitelist:
-    - wrongly marked me down
+    - but it is still running
     - objects unfound and apparently lost
 - thrashosds:
     chance_pgnum_grow: 2
