--- a/qa/suites/smoke/basic/tasks/rados_python.yaml
+++ b/qa/suites/smoke/basic/tasks/rados_python.yaml
@@ -2,7 +2,7 @@ tasks:
 - install:
 - ceph:
     log-whitelist:
-      - wrongly marked me down
+      - but it is still running
 - ceph-fuse:
 - workunit:
     clients:
