--- a/qa/suites/upgrade/hammer-jewel-x/parallel/0-cluster/start.yaml
+++ b/qa/suites/upgrade/hammer-jewel-x/parallel/0-cluster/start.yaml
@@ -5,6 +5,7 @@ overrides:
         mon warn on legacy crush tunables: false
         mon debug unsafe allow tier with nonempty snaps: true
     log-whitelist:
+      - but it is still running
       - wrongly marked me down
       - reached quota
 roles:
