--- a/qa/suites/upgrade/kraken-x/stress-split/3-thrash/default.yaml
+++ b/qa/suites/upgrade/kraken-x/stress-split/3-thrash/default.yaml
@@ -5,6 +5,7 @@ meta:
 overrides:
   ceph:
     log-whitelist:
+    - but it is still running
     - wrongly marked me down
     - objects unfound and apparently lost
     - log bound mismatch
