deb,rpm: require socat for ceph-test
Used by qa/standalone/mon/mon-bind.sh.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -678,6 +678,7 @@ Group:		System/Benchmark
 Requires:	ceph-common
 Requires:	xmlstarlet
 Requires:	jq
+Requires:	socat
 %description -n ceph-test
 This package contains Ceph benchmarks and test tools.
 %endif
