qa: whitelist "mon_osd_down_out_interval" health warning
Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/qa/tasks/thrashosds-health.yaml
+++ b/qa/tasks/thrashosds-health.yaml
@@ -1,6 +1,7 @@
 overrides:
   ceph:
     log-whitelist:
+      - mon_osd_down_out_interval set to 0
       - overall HEALTH_
       - (OSDMAP_FLAGS)
       - (OSD_
