qa/suites/rados: whitelist various tests
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/basic/tasks/rados_api_tests.yaml
+++ b/qa/suites/rados/basic/tasks/rados_api_tests.yaml
@@ -8,6 +8,7 @@ overrides:
     - (SMALLER_PGP_NUM)
     - (CACHE_POOL_NO_HIT_SET)
     - (CACHE_POOL_NEAR_FULL)
+    - (POOL_APP_NOT_ENABLED)
 tasks:
 - workunit:
     clients:
