--- a/qa/suites/rados/basic/tasks/rados_workunit_loadgen_mostlyread.yaml
+++ b/qa/suites/rados/basic/tasks/rados_workunit_loadgen_mostlyread.yaml
@@ -2,6 +2,8 @@ overrides:
   ceph:
     log-whitelist:
     - but it is still running
+    - overall HEALTH_
+    - (POOL_APP_NOT_ENABLED)
 tasks:
 - workunit:
     clients:
