--- a/qa/suites/rados/singleton/all/random-eio.yaml
+++ b/qa/suites/rados/singleton/all/random-eio.yaml
@@ -18,6 +18,8 @@ tasks:
     log-whitelist:
     - missing primary copy of
     - objects unfound and apparently lost
+    - overall HEALTH_
+    - (POOL_APP_NOT_ENABLED)
 - full_sequential:
   - exec:
       client.0:
