--- a/qa/suites/rados/verify/tasks/mon_recovery.yaml
+++ b/qa/suites/rados/verify/tasks/mon_recovery.yaml
@@ -5,5 +5,6 @@ overrides:
       - (MON_DOWN)
       - (OSDMAP_FLAGS)
       - (SMALLER_PGP_NUM)
+      - (POOL_APP_NOT_ENABLED)
 tasks:
 - mon_recovery:
