qa/suites: more whitelisting
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/monthrash/workloads/rados_api_tests.yaml
+++ b/qa/suites/rados/monthrash/workloads/rados_api_tests.yaml
@@ -8,6 +8,7 @@ overrides:
       - (REQUEST_SLOW)
       - (MON_DOWN)
       - (PG_
+      - (POOL_APP_NOT_ENABLED)
     conf:
       global:
         debug objecter: 20
