--- a/qa/suites/upgrade/kraken-x/parallel/0-cluster/start.yaml
+++ b/qa/suites/upgrade/kraken-x/parallel/0-cluster/start.yaml
@@ -24,6 +24,8 @@ overrides:
     - scrub mismatch
     - ScrubResult
     - wrongly marked
+    - (POOL_APP_NOT_ENABLED)
+    - overall HEALTH_
     conf:
       global:
         enable experimental unrecoverable data corrupting features: "*"
